updates to new site

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
 {{ partial "home/hero.html" . }}
+{{ partial "home/features.html" . }}
+{{ partial "home/users.html" . }}
 {{ partial "home/info.html" . }}
-{{ partial "home/cncf.html" . }}
+{{ partial "home/video.html" . }}
 {{ end }}
