--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -1,9 +1,9 @@
 {{ $title  := .Title }}
 {{ $desc   := .Params.description }}
-<section class="hero is-medium is-dark">
+<section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
-      <p class="title is-size-1 is-size-2-mobile has-text-weight-bold{{ if $desc }} is-spaced{{ end }}">
+      <p class="title is-size-2 is-size-2-mobile has-text-weight-bold{{ if $desc }} is-spaced{{ end }}">
         {{ $title }}
       </p>
 
