--- a/layouts/partials/social-buttons.html
+++ b/layouts/partials/social-buttons.html
@@ -1,11 +1,24 @@
 {{ $social := site.Params.social }}
 {{ $align  := .align | default "left" }}
-<div class="buttons is-{{ $align }}">
+<div class="buttons is-{{ $align }} has-text-white-bis">
+  {{ range $social }}
+
+    <span class="icon is-medium"><a class="icon has-text-white-bis" href="{{ .url }}">
+      <i class="fab fa-lg fa-{{ .icon }}"></i></a>
+    </span>
+
+  {{ end }}
+</div>
+
+<!--<div class="buttons is-{{ $align }}">
   {{ range $social }}
   <a class="button is-{{ .color }}" href="{{ .url }}">
     <span class="icon">
       <i class="fab fa-md fa-{{ .icon }}"></i>
     </span>
+    <span class="has-text-weight-bold">
+      {{ .label }}
+    </span>
   </a>
   {{ end }}
-</div>
+</div> -->
