--- a/layouts/shortcodes/connectors.html
+++ b/layouts/shortcodes/connectors.html
@@ -1,4 +1,5 @@
 {{ $connectors := site.Data.addons.addons }}
+{{ $clients := site.Data.clients}}
 
 <table>
   <thead>
@@ -49,3 +50,4 @@
     {{ end }}
   </tbody>
 </table>
+
