--- a/layouts/partials/companies.html
+++ b/layouts/partials/companies.html
@@ -1,11 +1,12 @@
 {{ $companies := site.Data.companies.companies }}
+
 <div class="container">
-  <div class="columns is-multiline">
+  <div class="columns is-vcentered is-multiline">
     {{ range $k, $v := $companies }}
     {{ $img := printf "img/logos/companies/%s" $v.logo | relURL }}
     <div class="column is-one-fifth logo">
       <a href="{{ $v.home }}" target="_blank">
-        <img src="{{ $img }}" alt="{{ $v.name }} logo">
+        <img class="is-user-logo" src="{{ $img }}" alt="{{ $v.name }} logo">
       </a>
     </div>
     {{ end }}
