--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,8 @@
 {{ $title   := site.Title }}
-{{ $bgColor := cond .IsHome "black" "white" }}
-{{ $color   := cond .IsHome "white-bis" "black" }}
+{{ $bgColor := cond .IsHome "black" "black" }}
+{{ $color   := cond .IsHome "white-bis" "white-bis" }}
 {{ $year    := now.Year }}
-{{ $logo    := cond .IsHome "footer_dark" "footer_light" }}
+{{ $logo    := cond .IsHome "footer_dark" "footer_dark" }}
 {{ $menu    := site.Menus.main }}
 {{ $showHr  := not .IsHome }}
 
@@ -10,31 +10,34 @@
 <hr />
 {{ end }}
 <footer class="footer has-background-{{ $bgColor }} has-text-{{ $color }}">
-  <section class="section">
-    <div class="container">
-      <div class="columns is-vcentered">
-        <div class="column">
-          {{ partial "logo.html" (dict "logo" $logo "footer" true) }}
-        </div>
+<div class="columns is-vcentered">
+  <div class="column">
+    {{ partial "social-buttons.html" (dict "align" "left") }}
+    <p class="has-text-weight-large">
+      Copyright &copy; NATS Authors {{ $year }}
+    </p>
+  </div>
+  <div class="column">
 
-        <div class="column">
-          {{ range $menu }}
-          <a class="is-size-5 is-size-6-mobile" href="{{ .URL }}">
-            {{ .Name }}
-          </a><br />
-          {{ end }}
-        </div>
+    {{ partial "home/cncf.html" (dict "align" "right") }}
 
-        <div class="column">
-          {{ partial "social-buttons.html" (dict "align" "right") }}
-        </div>
-      </div>
-
-      <hr class="is-footer-hr{{ if not $showHr }} has-background-white-bis{{ end }}" />
-
-      <p class="has-text-weight-medium">
-        Copyright &copy; NATS Authors {{ $year }}
-      </p>
-    </div>
-  </section>
+  </div>
+     <!--<div class="columns is-gapless">
+       <div class="column">
+          <p class="title is-size-1 is-size-3-mobile has-text-weight-bold is-spaced">
+        <span class="has-text-nats-blue">
+          Secure.
+        </span>
+            <span class="has-text-nats-green">
+          Simple.
+        </span>
+            <span class="has-text-nats-dark-blue">
+          Scalable.
+        </span>
+            <span class="has-text-nats-light-green">
+          Open Source.
+        </span>
+          </p>
+        </div> -->
+  </div>
 </footer>
