--- a/layouts/partials/home/cncf.html
+++ b/layouts/partials/home/cncf.html
@@ -1,10 +1,9 @@
-{{ $img := "img/logos/cncf-color.png" | relURL }}
+{{ $img := "img/logos/cncf-white.png" | relURL }}
 <section class="section">
   <div class="container has-text-centered">
-    <p class="is-size-3 is-size-5-mobile has-text-weight-light">
-      NATS is a <a href="https://cncf.io">Cloud Native Computing Foundation</a> incubating project
-    </p>
-
     <img class="is-cncf-logo" src="{{ $img }}" alt="CNCF logo">
+    <p class="is-size-5 is-size-5-mobile has-text-weight-light">
+    NATS is a <a href="https://cncf.io">Cloud Native Computing Foundation</a> incubating project
+    </p>
   </div>
 </section>
