--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -1,28 +1,12 @@
 <section class="hero is-dark is-medium">
+  <div class="background-con">
   <div class="hero-body">
     <div class="container has-text-centered">
       {{ partial "logo.html" (dict "logo" "hero" "class" true) }}
 
-      <p class="title is-size-1 is-size-3-mobile has-text-weight-bold is-spaced">
-        <span class="has-text-nats-blue">
-          Secure.
-        </span>
-        <span class="has-text-nats-green">
-          Simple.
-        </span>
-        <span class="has-text-nats-dark-blue">
-          Scalable.
-        </span>
-        <span class="has-text-nats-light-green">
-          Open Source.
-        </span>
-      </p>
-
       <p class="subtitle is-size-2 is-size-4-mobile has-text-weight-light">
-        <span class="has-text-weight-bold">
-          NATS 2.0
-        </span>
-        is now Generally Available
+
+        Cloud Native, Open Source, Secure, High-performance Messaging
       </p>
 
       <div class="buttons is-centered">
@@ -31,5 +15,6 @@
         </a>
       </div>
     </div>
+  </div>
   </div>
 </section>
