--- a/layouts/partials/download/client.html
+++ b/layouts/partials/download/client.html
@@ -1,5 +1,6 @@
-{{ $repo := printf "%s/%s" .ctx.org .ctx.repo }}
-{{ $link := printf "https://github.com/%s" $repo }}
+{{ $repo     := printf "%s/%s" .ctx.org .ctx.repo }}
+{{ $link     := printf "https://github.com/%s" $repo }}
+{{ $official := eq .ctx.org "nats-io" }}
 <div class="column is-half">
   <div class="card">
     <div class="card-content">
@@ -7,11 +8,23 @@
         {{ $repo }}
       </p>
 
-      {{ if .ctx.streaming_support }}
+      {{ if or .ctx.streaming_support $official }}
       <div class="buttons are-small">
+        {{ if .ctx.streaming_support }}
         <span class="button is-rounded is-success has-text-weight-bold">
           nats-streaming
         </span>
+        {{ end }}
+        {{ if $official }}
+        <span class="button is-primary has-text-weight-bold">
+          <span class="icon">
+            <i class="fas fa-star"></i>
+          </span>
+          <span>
+            official
+          </span>
+        </span>
+        {{ end }}
       </div>
       {{ end }}
 
