--- a/layouts/partials/blog/hero.html
+++ b/layouts/partials/blog/hero.html
@@ -1,9 +1,9 @@
 {{ $author := .Params.author }}
 {{ $date   := dateFormat "January 2, 2006" .Date }}
-<section class="hero is-dark is-medium">
+<section class="hero is-light is-small">
   <div class="hero-body">
     <div class="container">
-      <p class="title is-size-1 is-size-2-mobile has-text-weight-light is-spaced">
+      <p class="title is-size-2 is-size-2-mobile has-text-weight-light is-spaced">
         {{ .Title }}
       </p>
 
