--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -39,5 +39,17 @@
         </span>
           </p>
         </div> -->
+
   </div>
+
 </footer>
+<style>
+  :target::before {
+  content: "";
+  display: block;
+  margin-top: -80px;
+  height: 80px;
+  width: 1px;
+}
+</style>
+{{ partial "js.html" . }}
