--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -2,14 +2,16 @@
 {{ $home   := site.BaseURL }}
 {{ $menu   := site.Menus.main }}
 {{ $here   := .RelPermalink }}
-<nav class="navbar is-dark is-fixed-top">
+<nav class="navbar is-dark is-fixed-top is-expanded">
   <div class="container">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="{{ $home }}">
-        {{ if not .IsHome }}
-        {{ partial "logo.html" (dict "logo" "navbar") }}
-      </a>
-       {{ end }}
+   <div class="navbar-item"><a href="{{ $home }}">
+     {{ if not .IsHome }}
+     {{ partial "logo.html" (dict "logo" "navbar") }}
+     {{ else }}
+     {{ partial "logo.html" (dict "logo" "navbar_home") }}
+   </a>
+     {{ end }}
+   </div>
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
@@ -18,7 +20,7 @@
     </div>
 
     <div class="navbar-menu">
-      <div class="navbar-end">
+      <div class="navbar-end is-expanded">
         {{ range $menu }}
         {{ $isExternal := hasPrefix .URL "http" }}
         <a class="navbar-item has-text-weight-bold" href="{{ .URL }}"{{ if $isExternal }} target="_blank"{{ end }}>
