--- a/layouts/partials/blog/content.html
+++ b/layouts/partials/blog/content.html
@@ -1,8 +1,19 @@
 <section class="section">
   <div class="container">
+    <div class="content">
+    <a class="button is-small is-dark is-outlined" href="/blog">
+          <span class="icon has-text-primary">
+            <i class="fas fa-arrow-left"></i>
+          </span>
+      <span>
+            Back to Blog
+          </span>
+    </a>
+    </div>
     <div class="columns is-variable is-8">
       <div class="column is-two-thirds">
         <div class="content is-medium">
+
           {{ .Content }}
         </div>
 
@@ -13,12 +24,12 @@
             <i class="fas fa-arrow-left"></i>
           </span>
           <span>
-            Back to blog
+            Back to Blog
           </span>
         </a>
       </div>
 
-      <div class="column">
+      <!--<div class="column">
         <hr class="is-hidden-tablet" />
 
         <p class="title">
@@ -45,7 +56,7 @@
             {{ . }}
           </a>
           {{ end }}
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
