--- a/layouts/partials/blog/posts.html
+++ b/layouts/partials/blog/posts.html
@@ -1,11 +1,17 @@
 {{ $posts  := where site.RegularPages "Section" "blog" }}
 {{ $recent := first 10 $posts }}
 
+
 <section class="section">
   <div class="container">
-    <div class="columns is-variable is-8">
-      <div class="column is-two-thirds">
-        {{ range $recent }}
+    <div class="columns is-variable is-12">
+      <p class="is-size-5 is-size-6-mobile">Welcome to the NATS Blog! We have content from NATS Maintainers, end-users, and community contributors. We always appreciate outside contributions so if you would like to contribute a blog post, see our <a href="/contributing/#contributing-a-blog-post">Contributor's Guide</a> for more information.
+    </p>
+    </div>
+      <div class="columns is-variable is-12">
+        <div class="column is-three-fourths">
+
+        {{ range (.Paginator 10).Pages }}
         {{ $author := .Params.author | upper }}
         {{ $date   := dateFormat "January 2, 2006" .Date }}
         <div class="card">
@@ -28,37 +34,39 @@
           </div>
         </div>
         {{ end }}
+      <br>
+        {{ template "_internal/pagination.html" . }}
       </div>
-
-      <div class="column">
+    <!--  <div class="column">
         <p class="is-sticky">
-          <p class="title">
-            Categories
-          </p>
-
-          <div class="buttons are-small">
-            {{ range $k, $v := site.Taxonomies.categories }}
-            <a class="button is-dark is-outlined" href="/categories/{{ $k }}">
-              {{ $k }}
-            </a>
-            {{ end }}
-          </div>
-
-          <br />
-
-          <p class="title">
-            Tags
-          </p>
-
-          <div class="buttons are-small">
-            {{ range $k, $v := site.Taxonomies.tags }}
-            <a class="button is-dark is-outlined" href="/tags/{{ $k }}">
-              {{ $k }}
-            </a>
-            {{ end }}
-          </div>
+        <p class="title">
+          Categories
         </p>
-      </div>
+
+        <div class="buttons are-small">
+          {{ range $k, $v := site.Taxonomies.categories }}
+          <a class="button is-dark is-outlined" href="/categories/{{ $k }}">
+            {{ $k }}
+          </a>
+          {{ end }}
+        </div>
+
+        <br />
+
+        <p class="title">
+          Tags
+        </p>
+
+        <div class="buttons are-small">
+          {{ range $k, $v := site.Taxonomies.tags }}
+          <a class="button is-dark is-outlined" href="/tags/{{ $k }}">
+            {{ $k }}
+          </a>
+          {{ end }}
+        </div>
+        </p>
+      </div> -->
+
     </div>
   </div>
 </section>
