--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -6,14 +6,28 @@
 
       <p class="subtitle is-size-2 is-size-4-mobile has-text-weight-light">
 
-        Cloud Native, Open Source, Secure, High-performance Messaging
+        The Ultimate Connective Technology for Adaptive Distributed Systems <br/><br/>
       </p>
 
       <div class="buttons is-centered">
-        <a class="button is-medium is-light-green has-text-weight-bold" href="https://docs.nats.io/whats-new">
-          Learn more
+        <a class="button is-light is-medium has-text-weight-bold" href="https://docs.nats.io" target="_blank">
+        <span class="icon">
+            <i class="fas fa-lightbulb"></i>
+          </span>
+        <span>
+            Learn More
+          </span>
         </a>
-      </div>
+
+        <a class="button is-light is-medium has-text-weight-bold" href="https://docs.nats.io" target="_blank">
+        <span class="icon">
+            <i class="fas fa-server"></i>
+          </span>
+        <span>
+            Quick Start
+          </span>
+        </a>
+
     </div>
   </div>
   </div>
