--- a/layouts/shortcodes/buttons/social.html
+++ b/layouts/shortcodes/buttons/social.html
@@ -3,9 +3,9 @@
 {{ range $social }}
 {{ $color := .color | default "black" }}
 
-<a class="social-button" href="{{ .url }}" target="_blank">
+<a class="social-button is-hovered" href="{{ .url }}" target="_blank">
   <span class="icon has-text-{{ $color }}">
-    <i class="fab fa-lg fa-{{ .icon }}"></i>
+    <i class="fab fa-2x fa-{{ .icon }}"></i>
   </span>
 </a>
 
