--- a/layouts/partials/download/github-embed.html
+++ b/layouts/partials/download/github-embed.html
@@ -1,3 +1,5 @@
+{{/* Template for the Watch/Star/Fork buttons on each client page */}}
+
 {{ $repo := printf "https://github.com/%s" .repo }}
 
 <div class="github-embed">
