Add GA enable/disable switch
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -112,6 +112,9 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
 // @import "bulma/sass/components/panel"
 // @import "bulma/sass/components/tabs"
 
+// Bulma extensions
+@import "bulma-switch/src/sass/index"
+
 .has-extra-top-margin
   margin-top: 2rem
 
