--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -100,17 +100,17 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
 // @import "bulma/sass/elements/other"
 
 // Forms
-// @import "bulma/sass/form/shared"
-// @import "bulma/sass/form/input-textarea"
+@import "bulma/sass/form/shared"
+@import "bulma/sass/form/input-textarea"
 // @import "bulma/sass/form/checkbox-radio"
 // @import "bulma/sass/form/select"
 // @import "bulma/sass/form/file"
-// @import "bulma/sass/form/tools"
+@import "bulma/sass/form/tools"
 
 // Components
 // @import "bulma/sass/components/breadcrumb"
 @import "bulma/sass/components/card"
-// @import "bulma/sass/components/dropdown"
+@import "bulma/sass/components/dropdown"
 @import "bulma/sass/components/level"
 // @import "bulma/sass/components/list"
 @import "bulma/sass/components/media"
@@ -245,6 +245,9 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
    padding-right: .5em
    margin-bottom: 0rem;
 
+.fa-star
+	color: $nats-blue
+
 //Blog Pagination
 
 .pagination
@@ -285,3 +288,4 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
     color: #fff
     background-color: #007bff
     border-color: #007bff
+
