--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,6 +17,7 @@
   </head>
   <body class="is-page has-navbar-fixed-top">
     <main class="is-main">
+      {{ partial "privacy-popup.html" . }}
       {{ partial "navbar.html" . }}
 
       {{ block "main" . }}
