--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -92,7 +92,7 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
 @import "bulma/sass/elements/content"
 @import "bulma/sass/elements/icon"
 // @import "bulma/sass/elements/image"
-// @import "bulma/sass/elements/notification"
+@import "bulma/sass/elements/notification"
 // @import "bulma/sass/elements/progress"
 // @import "bulma/sass/elements/table"
 @import "bulma/sass/elements/tag"
@@ -121,6 +121,9 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
 @import "bulma/sass/components/pagination"
 // @import "bulma/sass/components/panel"
 // @import "bulma/sass/components/tabs"
+
+// Bulma extensions
+@import "bulma-switch/src/sass/index"
 
 .has-extra-top-margin
   margin-top: 2rem
@@ -288,4 +291,15 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
     color: #fff
     background-color: #007bff
     border-color: #007bff
+
+.privacy-popup
+    font-size: 85%
+    background-color: #375c93
+    color: #fff
+    text-align: center
+    font-size: 12pt
+    padding: 10px
+    border-width: 0
+    opacity: 1.0
+
 
