Update Download page

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -112,7 +112,7 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
 @import "bulma/sass/components/card"
 @import "bulma/sass/components/dropdown"
 @import "bulma/sass/components/level"
-// @import "bulma/sass/components/list"
+@import "bulma/sass/components/list"
 @import "bulma/sass/components/media"
 // @import "bulma/sass/components/menu"
 // @import "bulma/sass/components/message"
@@ -189,6 +189,7 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
     font-style: normal !important
 
   table tr td
+    font-size: 1.1rem
     +desktop
       min-width: 20rem
     +mobile
@@ -215,7 +216,7 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
     background-color: $light
 
 .background-con
-    background: url(/img/home-background.jpg) repeat-x center 150px
+    background: url(/img/home-background.jpg) repeat-x center 225px
 
 .has-top-margin
   margin-top: 2rem
@@ -248,7 +249,7 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
    padding-right: .5em
    margin-bottom: 0rem;
 
-.fa-star
+//.fa-star
 	color: $nats-blue
 
 //Blog Pagination
