--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -6,7 +6,7 @@
 
       <p class="subtitle is-size-2 is-size-4-mobile has-text-weight-light">
 
-        The Ultimate Connective Technology for Adaptive Distributed Systems <br/><br/>
+        Connective Technology for Adaptive Edge &  Distributed Systems <br/><br/>
       </p>
 
       <div class="buttons is-centered">
