--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -38,10 +38,10 @@
           <span>
             {{ .Name }}
           </span>
-          {{ if $isExternal }}
-          <span class="icon has-text-primary">
+       {{ if $isExternal }}
+          <!--<span class="icon has-text-primary">
             <i class="fas fa-sm fa-external-link-alt"></i>
-          </span>
+          </span> -->
           {{ end }}
         </a>
         {{ end }}
