--- a/layouts/partials/download/github-embed.html
+++ b/layouts/partials/download/github-embed.html
@@ -4,4 +4,6 @@
   <a class="github-button" href="{{ $repo }}/subscription" data-icon="octicon-eye" aria-label="Watch {{ .repo }} on GitHub" data-show-count="true">Watch</a>
   <a class="github-button" href="{{ $repo }}" data-icon="octicon-star" aria-label="Star {{ .repo }} on GitHub" data-show-count="true">Star</a>
   <a class="github-button" href="{{ $repo }}/fork" data-icon="octicon-repo-forked" aria-label="Fork {{ .repo }} on GitHub" data-show-count="true">Fork</a>
+  <a class="github-button" href="{{ $repo }}"  aria-label="View {{ .repo }} on GitHub" >View on GitHub</a>
+
 </div>
