Update missing clients Fix GDPR banner

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -249,7 +249,7 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
    padding-right: .5em
    margin-bottom: 0rem;
 
-//.fa-star
+.fa-star-blue
 	color: $nats-blue
 
 //Blog Pagination
@@ -294,6 +294,7 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
     border-color: #007bff
 
 .privacy-popup
+    display: none
     font-size: 85%
     background-color: #375c93
     color: #fff
