--- a/layouts/shortcodes/client_glc.html
+++ b/layouts/shortcodes/client_glc.html
@@ -18,7 +18,7 @@
       Description
     </th>
     <th>
-      Author(s)
+      Developers
     </th>
     <th>
       Details
@@ -69,7 +69,7 @@
       {{ if $official }}
       {{ $a.author }}
           <span>
-            <i class="fas fa-star fa-xs"></i>
+            <i class="fas fa-star fa-xs fa-star-blue"></i>
           </span>
       {{ else }} {{ $a.author }}
       {{ end }}
