remove streaming server clients add What's New in NATS 2.2 Blog update navbar NATS icon

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -304,4 +304,11 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
     border-width: 0
     opacity: 1.0
 
+.flex-container
+  display: flex
+
+.flex-container > div
+  margin: 5px
+  padding: 0px
+
 
