What's new blog updated per Colin comments Fixed broken client links Added nats.deno, nats.ws Added Docker badge to NATS server on download Updated About text Updated Download text Added Starbucks logo Updated social links to open in new

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -236,8 +236,8 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
    justify-content: right
 
 .is-user-logo
-     height: 50%
-     width: 50%
+     height: 60%
+     width: 60%
 
 .column
     &.has-text-centered
@@ -310,5 +310,10 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
 .flex-container > div
   margin: 5px
   padding: 0px
+
+.left
+  float: left
+  padding : 0 10px 0 0
+
 
 
