Updated About language Updated index button links removed Starbucks logo

--- a/layouts/partials/download/servers.html
+++ b/layouts/partials/download/servers.html
@@ -93,7 +93,7 @@
             {{ if .streaming_support }}
             <a class="button is-black is-outlined" href="https://docs.nats.io/nats-streaming-server/install" target="_blank">
             {{ else }}
-            <a class="button is-black is-outlined" href="https://docs.nats.io/installation" target="_blank">
+            <a class="button is-black is-outlined" href="https://docs.nats.io/nats-server/installation" target="_blank">
             {{ end }}
                       <span class="icon">
                         <i class="fas fa-book-open"></i>
