fix for mobile added viewport meta data in meta.html updated navbar to navbar-brand on navbar.html

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html{{ with $lang }} lang="{{ . }}"{{ end }}>
   <head>
+    {{ partial "meta.html" . }}
     <title>
       {{ block "title" . }}
       {{ site.Title }} &ndash; {{ site.Params.tagline }}
