--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -7,6 +7,7 @@
 
 <nav class="navbar is-dark is-fixed-top is-expanded">
   <div class="container">
+   <div class="navbar-brand">
     <div class="navbar-item">
 
     </div>
@@ -26,7 +27,7 @@
         <span aria-hidden="true"></span>
       </a>
     </div>
-
+   </div>
     <div class="navbar-menu">
       <div class="navbar-end is-expanded">
         {{ if $isBlog }}
@@ -49,7 +50,7 @@
           {{ partial "social-buttons.html" (dict) }}
         </div>
 
-      </div>
+
     </div>
   </div>
 </nav>
