--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,3 +1,5 @@
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 
+<!-- Twitter Card -->
+{{ template "_internal/twitter_cards.html" . }}
