--- a/layouts/partials/blog/content.html
+++ b/layouts/partials/blog/content.html
@@ -11,7 +11,7 @@
     </a>
     </div>
     <div class="columns is-variable is-8">
-      <div class="column is-two-thirds">
+      <div class="column is-three-quarters">
         <div class="content is-medium">
 
           {{ .Content }}
