add Open Graph template

--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -3,3 +3,7 @@
 
 <!-- Twitter Card -->
 {{ template "_internal/twitter_cards.html" . }}
+
+<!-- Open Graph -->
+{{ template "_internal/opengraph.html" . }}
+
