update partner logo size

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -239,6 +239,10 @@ $colors: mergeColorMaps(("primary-dark": ($nats-dark-blue, $white), "light-green
      height: 60%
      width: 60%
 
+.is-partner-logo
+     height: 75%
+     width: 75%
+
 .is-video
   @include mobile
     max-width: 100%
