--- a/layouts/partials/partners.html
+++ b/layouts/partials/partners.html
@@ -1,11 +1,11 @@
 {{ $partners := site.Data.partners.partners }}
 <div class="container">
-  <div class="columns is-multiline">
+  <div class="columns is-vcentered is-multiline">
     {{ range $k, $v := $partners }}
     {{ $img := printf "img/logos/partners/%s" $v.logo | relURL }}
     <div class="column is-one-fifth logo">
       <a href="{{ $v.home }}" target="_blank">
-        <img src="{{ $img }}" alt="{{ $v.name }} logo">
+        <img class="is-partner-logo" src="{{ $img }}" alt="{{ $v.name }} logo">
       </a>
     </div>
     {{ end }}
